# functional-programming

./: README.md
Assignment1/: basicexamples.html  basicexamples.js  basicexamples.js.map  basicexamples.ts  index.html  pong.html  pong.js  pong.js.map  pong.ts
Assignment2/: README.md
Assignment2/logs/: 1.csv  2.csv  4.csv
FIT2102Assignment2/logs/: 3.csv
FIT2102Assignment2/staticgame/: Player.hs
LIST/: List.js  List.ts  lecture.js  lecture.ts  list1.js  list1.ts
exercise2/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
exercise2/src/: Callcentre.hs
exercise2/test/: Spec.hs
haskell/: begin.hs  fibs.hs
lecture3exercise1-2/: checklist.html  map.js  map.ts
lecture3exercise1-2/test/: main.test.js
lecture3exercise2-1/: checklist.html  list.js  list.ts
lecture3exercise2-1/test/: main.test.js
pointfree/: .gitignore  README.md  package.yaml  stack.yaml
pointfree/src/: Pointfree.hs
pointfree/test/: Spec.hs
releasedframework/: README.md
releasedframework/logs/: 1.csv
releasedframework/src/: OhHell.hs  OhTypes.hs
releasedframework/staticgame/: Player.hs
test/workshop6/: workshop6.cabal
test/workshop6/app/: Main.hs
test/workshop6/test/: Spec.hs
workshop10/: README.md  haskell-tutes.cabal
workshop10/.stack-work/install/x86_64-osx/lts-11.22/8.2.2/flag-cache/: haskell-tutes-0.1.0.0-BNUJnE3XuXS5kv5h66avW4
workshop10/.stack-work/install/x86_64-osx/lts-11.22/8.2.2/lib/x86_64-osx-ghc-8.2.2/: libHShaskell-tutes-0.1.0.0-BNUJnE3XuXS5kv5h66avW4-ghc8.2.2.dylib
workshop10/.stack-work/install/x86_64-osx/lts-11.22/8.2.2/lib/x86_64-osx-ghc-8.2.2/haskell-tutes-0.1.0.0-BNUJnE3XuXS5kv5h66avW4/: Applicative.dyn_hi  Applicative.hi  FileIO.dyn_hi  Functions.hi  Functor.dyn_hi  Monad.dyn_hi
workshop10/.stack-work/install/x86_64-osx/lts-11.22/8.2.2/pkgdb/: haskell-tutes-0.1.0.0-BNUJnE3XuXS5kv5h66avW4.conf  package.cache
workshop10/app/: Main.hs
workshop10/share/: a.txt  b.txt  c.txt  test.txt
workshop10/src/: Applicative.hs  Base.hs  FileIO.hs  Functions.hs  Functor.hs  Monad.hs  Support.hs
workshop10/test/: Spec.hs
workshop11/: LICENSE  README.md  haskell-tutes.cabal  stack.yaml
workshop11/app/: Main.hs
workshop11/share/: films.json
workshop11/src/: Blank.hs  Extras.hs  JSON.hs  Parser.hs  Specials.hs
workshop11/test/: Spec.hs
workshop3/: main.js  main.ts  tsconfig.json  worksheetChecklist.html
workshop3/test/: main.test.js
workshop4/: lazy.js  lazy.ts  main.js  main.ts
workshop4.1/: Reading.docx  challenge.html  listening.docx  main.js  main.ts  speaking.docx  tsconfig.json
workshop4/test/: main.test.js
workshop4。1/: Writing.docx  worksheetChecklist.html
workshop6/: README.md  package.yaml  stack.yaml
workshop6/src/prac/: fibs.hs  qSort.hs
workshop6/src/week6/: BinTree.hs  List.hs  Pair.hs
workshop7/: README.md  package.yaml  stack.yaml  workshop7.cabal
workshop7/app/: Main.hs
workshop7/src/: Maybes.hs  RockPaperScissors.hs  SafeList.hs
workshop7/src/prac/: Eq.hs  Maybe.hs  custom.hs  ord.hs  polymorphism.hs  record_syntax.hs  student.hs
workshop8/: README.md  haskell-tutes.cabal
workshop8/.stack-work/install/x86_64-osx/lts-11.22/8.2.2/doc/haskell-tutes-0.1.0.0/: LICENSE
workshop8/.stack-work/install/x86_64-osx/lts-11.22/8.2.2/flag-cache/: haskell-tutes-0.1.0.0-7TKq6HTn4VZFi18Zn4nbmB
workshop8/.stack-work/install/x86_64-osx/lts-11.22/8.2.2/lib/x86_64-osx-ghc-8.2.2/: libHShaskell-tutes-0.1.0.0-7TKq6HTn4VZFi18Zn4nbmB-ghc8.2.2.dylib
workshop8/.stack-work/install/x86_64-osx/lts-11.22/8.2.2/lib/x86_64-osx-ghc-8.2.2/haskell-tutes-0.1.0.0-7TKq6HTn4VZFi18Zn4nbmB/: Applicative.dyn_hi  Exercises.dyn_hi  Functor.hi
workshop8/src/: Applicative.hs  Base.hs  Exercises.hs  Functor.hs  test.hs
workshop8/test/: Spec.hs
workshop9/: README.md  haskell-tutes.cabal  lec.hs
workshop9/src/: Applicative.hs  Base.hs  Functions.hs  Functor.hs  Traversable.hs  foldtest.hs
workshop9/src/untitled folder/: Functions.hs  Traversable.hs
workshop9/test/: Spec.hs
(+16 files in other folders)
