name:                haskell-tutes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-tutes#readme
license:             BSD3
license-file:        LICENSE
author:              Arthur Maheo
maintainer:          arthur.maheo@monash.edu
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Monad, FileIO, Applicative, Base, Functions, Functor, Support
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -XNoImplicitPrelude
  default-language:    Haskell2010

executable haskell-tutes
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -XNoImplicitPrelude
  build-depends:       base
                     , haskell-tutes
  default-language:    Haskell2010

test-suite haskell-tutes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Glob >= 0.7.14
                     , base
                     , doctest >= 0.11
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -XNoImplicitPrelude
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-tutes
